--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="content"></div>
-    <script src="./main.js"></script>
+    <script src="./dist/main.js"></script>
     <!-- <script src='../src/index.js'></script> -->
   </body>
 </html>
