--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../src/styles/style.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
     <title>Restaurant Page</title>
   </head>
   <body>
